# volume-profile-trading

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  volume-profile-estrategia.md  volume-profile-strategy.md
.claude/: context.md  decisions.md  handoff.md  todo.md
scripts/: build_report.py  run_experiments.py  run_falsification.py
src/vptrading/: __init__.py
src/vptrading/analysis/: __init__.py  falsification.py  studies.py
src/vptrading/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/vptrading/core/: __init__.py  composite.py  daytype.py  profile.py
src/vptrading/data/: __init__.py  loader.py
src/vptrading/optimization/: __init__.py  search.py
src/vptrading/reporting/: __init__.py  charts.py  pdf_report.py
src/vptrading/strategies/: __init__.py  daily.py  rule80.py
tests/: test_metrics_engine.py  test_profile.py
